# data-analyze-for-zcl

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.xhs-ceramics-analytics/: report_writer_workflow.js
orchestration/: dag.md  runbook.md
references/: cheatsheet.md  data_contract.md  evidence_strength.md  experiment_matrix.md  metric_definitions.md  report_contract.md  task_menu.md  troubleshooting.md  xhs_glossary.md
scripts/: bootstrap  bootstrap_python.sh  bootstrap_runtime.py  run-evals  xhs-ca
task_templates/: account_baseline.md  ad_data_quality_check.md  audience_structure_diagnosis.md  channel_structure_diagnosis.md  comment_demand_mining.md  content_portfolio_optimization.md  content_response_curve.md  copy_angle_effect.md  core_business_diagnosis.md  cover_style_effect.md  data_quality_check.md  demand_funnel_diagnosis.md  hypothesis_knowledge_base.md  note_commercial_diagnosis.md  note_funnel.md  paid_traffic_efficiency.md  product_content_interaction.md  product_opportunity_matrix.md  refund_root_cause_diagnosis.md  refund_structure_diagnosis.md  reshoot_repost_candidates.md  search_efficiency_diagnosis.md  sku_counterfactual_lift.md  sku_structure_diagnosis.md  weekly_business_review.md  weekly_experiment_matrix.md
tests/: conftest.py  test_analysis_prose.py  test_analysis_tasks.py  test_analytics_benchmark.py  test_analytics_cadence.py  test_analytics_concentration.py  test_analytics_confidence.py  test_analytics_decomposition.py  test_analytics_distribution.py  test_analytics_elasticity.py  test_analytics_mean_diff.py  test_cli_facts.py  (+57 more)
(+434 files in other folders)
